--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
-h1 {
-	font-size: 10em;
-}
+    fieldset {
+      border: 0;
+    }
+
+    label {
+      display: block;
+      margin: 30px 0 0 0;
+    }
+
+    select {
+      width: 200px;
+    }
+
+    .overflow {
+      height: 200px;
+    }
