--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,11 @@
     .overflow {
       height: 200px;
     }
+
+    .ui-slider-handle {
+      outline-width: 0;
+    }
+
+    .signature {
+      width: 30px;
+    }
