--- a/client/views/hackthenorth.html
+++ b/client/views/hackthenorth.html
@@ -1,17 +1,82 @@
 <head>
   <title>hackthenorth</title>
+  <style>
+	  .example_path {
+			position:relative;
+			overflow:hidden;
+			width:1000px;
+			height:150px;
+			border:3px solid #CCFFCC;
+			border-radius: 150px;
+		}
+
+		.example_path #example_block {
+			position:absolute;
+			left:-30px;
+			width:30px;
+			height:150px;
+			padding-top:10px;
+			text-align:center;
+			background-color:#009900;
+			font-size:10px;
+			white-space:nowrap;
+		}
+
+		#frame {
+			position: absolute;
+			top: 141px;
+			left: 500px;
+			width: 50px;
+			height: 150px;
+			background-color: black;
+			border-width: 5px;
+
+		}
+	</style>
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script>
+
+		var score = 0;
+
+    function move() {
+      var elem = document.getElementById("example_block");
+      var left = 0
+
+      function frame() { 
+        left++  // update parameters 
+        
+        elem.style.left = left + '4px' // show frame 
+
+        if (left == 100)  // check finish condition
+          clearInterval(id)
+      }
+      var id = setInterval(frame, 10) // draw every 10ms
+    }
+
+    setInterval(move, 1500);
+
+		
+	</script>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>Welcome to Drumroll!</h1>
 
   {{> hello}}
 </body>
 
 <template name="hello">
-  Enter BPM: <input type="text" id="BPM" />
+	<div class="container">
+		<div id="title">
+			<h1 id="score">Score:</h1>
+		</div>
+	</div>
+	<div class="example_path">
+<div id="example_block"></div></div>
+<div id="frame"></div>
+ <!-- Enter BPM: <input type="text" id="BPM" />
   <br />
   <button id="startMetronome">Start Me</button>
   <button id="stopMetronome">Stop Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+  <p>You've pressed the button {{counter}} times.</p> -->
 </template>
